# buraboat

./: .env  .gitignore  .gitlab-ci.yml  Dockerfile  README.md  docker-compose.yml  gunicorn_conf.py  manage.py  pip-cached-install.sh  pyproject.toml  requirements.txt
ansible/: nginx.conf.tpl  set_http.yml  set_https.yml  set_panchuk35.yml  set_root.yml  yoursite.com-ssl.conf.tpl  yoursite.com.conf.tpl
api/: admin.py  models.py  serializers.py  urls.py  views.py
boraboat/: asgi.py  urls.py  wsgi.py
boraboat/settings/: __init__.py  base_settings.py  env.py
calculation/: admin.py  models.py  serializers.py  urls.py  views.py
calculation/templates/booking/: index.html
events/: admin.py  models.py
nginx/: Dockerfile  nginx.conf  project.conf
pdfgenerator/: admin.py  models.py  serializers.py  views.py
pdfgenerator/templates/: home.html  pdf_template.html
referal/: admin.py  mail.py  models.py  views.py
referal/static/: style.css
referal/templates/forgot/: index.html  pass.html
referal/templates/login/: index.html
referal/templates/referal/: error.html  index.html  login.html  success.html
referal/templates/register/: code.html  index.html
users/: admin.py  models.py
